# csp-reporting

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  setup.py
csp_reporting/: admin.py  apps.py  middleware.py  models.py  tests.py  urls.py  views.py
csp_reporting/migrations/: 0001_initial.py  0002_cspreport_blocked_uri_cspreport_document_uri_and_more.py
